# ai-automation-toolkit

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CASE_STUDY.md  DEMO_SCRIPT_90S.md  FAILURE_MODES.md  WORKFLOWS.md
reports/: benchmark.md  metrics.json
src/automation_toolkit/: config.py  services.py
src/automation_toolkit/api/: main.py
tests/: test_api.py
tests/fixtures/: document_intake_payload.json  lead_enrich_payload.json  support_summary_payload.json
